index.html complete

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -7,3 +7,4 @@
 @import "../styles/blocks/main-nav.scss";
 @import "../styles/blocks/site-list.scss";
 @import "../styles/blocks/user-list.scss";
+@import "../styles/blocks/stats.scss";
